syntax = "proto3";

package event;

option java_multiple_files = true;
option java_package = "com.vou.common.proto.event";
option java_outer_classname = "EventReceiver";

//Receive request: FullVoucherInfo from GameService.
message GetVoucherMessage{
  string voucherId = 1;
}

message GetVoucherResponse{
  string voucherId = 1;
  string eventId = 2;
  string code = 3;
  string qrCode = 4;
  double value = 5;
  string description = 6;
  string expiredDate = 7;
  string status = 8;
}


service EventService {
  rpc getVoucherInfo(GetVoucherMessage) returns (GetVoucherResponse);
}